objects/Quote/fields/ELV_Marketplace_Impact_Override__c.field-meta.xml
<CustomField>
    <fullName>ELV_Marketplace_Impact_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketplace Impact Override</label>
    <type>Checkbox</type>
</CustomField>