objects/Quote/fields/ELV_Marketplace_Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>ELV_Marketplace_Offer_Type__c</fullName>
    <label>Marketplace Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private Offer</fullName>
            </value>
            <value>
                <fullName>Consulting Partner Private Offer (CPPO)</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>