objects/Quote/fields/ELV_Marketplace_Partner__c.field-meta.xml
<CustomField>
    <fullName>ELV_Marketplace_Partner__c</fullName>
    <description>Will be checked if the Advantage Program Tier field value of the partner account is Marketplace.</description>
    <formula>ISPICKVAL( ELV_Partner__r.Partner_Level__c, &apos;Marketplace&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When this box is checked, it indicates that the partner is a Marketplace provider.</inlineHelpText>
    <label>Marketplace Partner</label>
    <type>Checkbox</type>
</CustomField>