objects/Quote/fields/ELV_Max_Bundle_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ELV_Max_Bundle_Quantity__c</fullName>
    <label>Max Bundle Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>