objects/Quote/fields/ELV_Max_Burst_Term_Rollup__c.field-meta.xml
<CustomField>
    <fullName>ELV_Max_Burst_Term_Rollup__c</fullName>
    <label>Max Burst Term Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>