objects/Quote/fields/ELV_Max_Computed_Term__c.field-meta.xml
<CustomField>
    <fullName>ELV_Max_Computed_Term__c</fullName>
    <formula>/* IF(ISBLANK(ELV_Max_End_Date__c),Ruby__SubscriptionTerm__c,(YEAR(ELV_Max_End_Date__c) - YEAR(ELV_Min_Start_Date__c))*12 - MONTH(ELV_Min_Start_Date__c) + MONTH(ELV_Max_End_Date__c) + ((DAY(ELV_Max_End_Date__c) - DAY(ELV_Min_Start_Date__c) + 1) / CASE(MONTH(ELV_Max_End_Date__c), 4,30, 6,30, 9,30, 11,30, 2, IF(OR( MOD( YEAR(ELV_Max_End_Date__c), 400 ) = 0, AND( MOD( YEAR(ELV_Max_End_Date__c), 4 ) = 0, MOD( YEAR( ELV_Max_End_Date__c ), 100 ) != 0 ) ),29,28), 31)))
*/ 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Computed Term</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>