objects/Quote/fields/ELV_Max_End_date_on_Template__c.field-meta.xml
<CustomField>
    <fullName>ELV_Max_End_date_on_Template__c</fullName>
    <label>Max End date on Template</label>
    <type>Date</type>
</CustomField>