objects/Quote/fields/ELV_Max_End_Date_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>ELV_Max_End_Date_Quote_Line__c</fullName>
    <label>Max End Date Quote Line</label>
    <type>Date</type>
</CustomField>