objects/Quote/fields/ELV_Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ELV_Max_Quantity__c</fullName>
    <label>Max Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>