objects/Quote/fields/ELV_Max_Quantity_Formula__c.field-meta.xml
<CustomField>
    <fullName>ELV_Max_Quantity_Formula__c</fullName>
    <formula>ELV_Max_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>