objects/Quote/fields/ELV_Max_Trial_Term_Rollup__c.field-meta.xml
<CustomField>
    <fullName>ELV_Max_Trial_Term_Rollup__c</fullName>
    <label>Max Trial Term Rollup</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>