objects/Quote/fields/ELV_MaxEndDateofRebateEligibleLines__c.field-meta.xml
<CustomField>
    <fullName>ELV_MaxEndDateofRebateEligibleLines__c</fullName>
    <label>DEPRECATED - Max End Date Rebate Lines</label>
    <type>Date</type>
</CustomField>