objects/Quote/fields/ELV_Migration_Total_Baseline__c.field-meta.xml
<CustomField>
    <fullName>ELV_Migration_Total_Baseline__c</fullName>
    <label>Migration Total Baseline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>