objects/Quote/fields/ELV_Min_Start_Date_ARR_Eligible_Lines__c.field-meta.xml
<CustomField>
    <fullName>ELV_Min_Start_Date_ARR_Eligible_Lines__c</fullName>
    <description>TNCI-206 / ELV-DM-010. Converted from a writable Date to a roll-up summary. Nue port of CPQ price rule summary variable Get Earliest Start Date (Min SBQQ__StartDate__c where Exclude_ARR_Formula__c = True). Feeds the earliest-start branch of the ELV Day 1 ARR Start Date cascade. Summary Items are excluded via ELV Include in ARR Calc.</description>
    <inlineHelpText>Earliest subscription start date across ARR-eligible lines.</inlineHelpText>
    <label>Min Start Date - ARR Eligible Lines</label>
    <summarizedField>QuoteLineItem.Ruby__SubscriptionStartDate__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ELV_Include_in_ARR_Calc__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>