objects/Quote/fields/ELV_MinStartDateofRebateEligLines__c.field-meta.xml
<CustomField>
    <fullName>ELV_MinStartDateofRebateEligLines__c</fullName>
    <label>DEPRECATED - Min Start Date Rebate Lines</label>
    <type>Date</type>
</CustomField>