objects/Quote/fields/ELV_Module_numbers__c.field-meta.xml
<CustomField>
    <fullName>ELV_Module_numbers__c</fullName>
    <label>Module numbers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>