objects/Quote/fields/ELV_NARR_Formula__c.field-meta.xml
<CustomField>
    <fullName>ELV_NARR_Formula__c</fullName>
    <formula>IF(ELV_Day_1_ARR__c &gt;= ELV_Incoming_ARR_formula__c, ELV_Day_1_ARR__c - ELV_Incoming_ARR_formula__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales NARR (New ARR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>