objects/Quote/fields/ELV_Net_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Net_Discount__c</fullName>
    <formula>IF( Ruby__ListTotal__c =0,0, (Ruby__ListTotal__c - Ruby__SellerTotalAmount__c )/Ruby__ListTotal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>