objects/Quote/fields/ELV_Net_Total_Billing__c.field-meta.xml
<CustomField>
    <fullName>ELV_Net_Total_Billing__c</fullName>
    <formula>ELV_Billing_Schedule_Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total Billing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>