objects/Quote/fields/ELV_NetAmountpriortoMarch3ARRrecalc__c.field-meta.xml
<CustomField>
    <fullName>ELV_NetAmountpriortoMarch3ARRrecalc__c</fullName>
    <label>Net Amount prior to March 3 ARR recalc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>