objects/Quote/fields/ELV_New_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>ELV_New_Opportunity_Type__c</fullName>
    <formula>IF( ELV_Do_Not_Show_Dates__c = TRUE, FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Do not show date = True then this field is False</inlineHelpText>
    <label>New Opportunity Type?</label>
    <type>Checkbox</type>
</CustomField>