objects/Quote/fields/ELV_New_Rollup_Amount__c.field-meta.xml
<CustomField>
    <fullName>ELV_New_Rollup_Amount__c</fullName>
    <label>New Rollup Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>