objects/Quote/fields/ELV_Newly_Quoted_Modules__c.field-meta.xml
<CustomField>
    <fullName>ELV_Newly_Quoted_Modules__c</fullName>
    <label>Newly Quoted Modules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>