objects/Quote/fields/ELV_No_of_End_Points_Quote_Score__c.field-meta.xml
<CustomField>
    <fullName>ELV_No_of_End_Points_Quote_Score__c</fullName>
    <formula>IF(ELV_Seats_Purchased_Override__c &gt; 0, ELV_Seats_Purchased_Override__c, IF(ELV_Seats_Purchased_at_Approval__c &gt; 0, ELV_Seats_Purchased_at_Approval__c, Opportunity.Account.Tanium_Derived_EP_WF__c +  ELV_Core_Quantity__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Purchased</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>