objects/Quote/fields/ELV_Non_persistent_VDI_Use_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ELV_Non_persistent_VDI_Use_Quantity__c</fullName>
    <inlineHelpText>For Deal Desk Use Only - Enter the Customer&apos;s daily Non-Persistent VDI license count. Customer may use up to _____ Non-Persistent VDI licenses for each of the Licensed Software identified in the table above during the relevant Committed Term.</inlineHelpText>
    <label>DEPRECATED - Non-persistent VDI Use Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>