objects/Quote/fields/ELV_Not_New_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>ELV_Not_New_Opportunity_Type__c</fullName>
    <formula>IF( NOT( ISPICKVAL( Opportunity.Type, &quot;New Customer&quot;)) &amp;&amp; (ELV_Do_Not_Show_Dates__c = True), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not New Opportunity Type?</label>
    <type>Checkbox</type>
</CustomField>