objects/Quote/fields/ELV_NS_Sales_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>ELV_NS_Sales_Order_Status__c</fullName>
    <label>NS Sales Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>