objects/Quote/fields/ELV_OnsiteTAMCount__c.field-meta.xml
<CustomField>
    <fullName>ELV_OnsiteTAMCount__c</fullName>
    <label>Onsite TAM Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>