objects/Quote/fields/ELV_Operation_Suites_SKU__c.field-meta.xml
<CustomField>
    <fullName>ELV_Operation_Suites_SKU__c</fullName>
    <label>Operation Suites SKU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>