objects/Quote/fields/ELV_Operators_Approval_Screen_Share__c.field-meta.xml
<CustomField>
    <fullName>ELV_Operators_Approval_Screen_Share__c</fullName>
    <label>Operators at Approval (ScreenShare)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>