objects/Quote/fields/ELV_Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>ELV_Opp_Name__c</fullName>
    <formula>Opportunity.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Name</label>
    <type>Text</type>
</CustomField>