objects/Quote/fields/ELV_Opp_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>ELV_Opp_Next_Steps__c</fullName>
    <formula>Opportunity.NextStep</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Next Step</label>
    <type>Text</type>
</CustomField>