objects/Quote/fields/ELV_Opp_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>ELV_Opp_Payment_Terms__c</fullName>
    <formula>VALUE(TEXT(Ruby__PaymentTerm__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Payment Terms</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>