objects/Quote/fields/ELV_Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_Opportunity_Close_Date__c</fullName>
    <formula>Opportunity.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>