objects/Quote/fields/ELV_Opportunity_Contract_Manager__c.field-meta.xml
<CustomField>
    <fullName>ELV_Opportunity_Contract_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Contract Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>