objects/Quote/fields/ELV_Opportunity_Contracted__c.field-meta.xml
<CustomField>
    <fullName>ELV_Opportunity_Contracted__c</fullName>
    <label>Opportunity Contracted</label>
    <type>DateTime</type>
</CustomField>