objects/Quote/fields/ELV_Opportunity_Quote_Amount_Diff__c.field-meta.xml
<CustomField>
    <fullName>ELV_Opportunity_Quote_Amount_Diff__c</fullName>
    <formula>IF( ABS(Ruby__SellerTotalAmount__c - Opportunity.Amount)&lt;1 ,FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity &amp; Quote Amount Diff</label>
    <type>Checkbox</type>
</CustomField>