objects/Quote/fields/ELV_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>ELV_Opportunity_Stage__c</fullName>
    <formula>Text(Opportunity.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>