objects/Quote/fields/ELV_Opportunity_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>ELV_Opportunity_Territory_Id__c</fullName>
    <formula>Opportunity.Territory2Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Territory Id</label>
    <type>Text</type>
</CustomField>