objects/Quote/fields/ELV_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>ELV_Opportunity_Type__c</fullName>
    <formula>TEXT(Opportunity.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>