objects/Quote/fields/ELV_Ordered__c.field-meta.xml
<CustomField>
    <fullName>ELV_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordered</label>
    <type>Checkbox</type>
</CustomField>