objects/Quote/fields/ELV_OTD__c.field-meta.xml
<CustomField>
    <fullName>ELV_OTD__c</fullName>
    <label>OTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>