objects/Quote/fields/ELV_Partner__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Partner)</relationshipLabel>
    <relationshipName>ELV_Partner_Q</relationshipName>
    <type>Lookup</type>
</CustomField>