objects/Quote/fields/ELV_Partner_Account_Partner_Maturity__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Account_Partner_Maturity__c</fullName>
    <formula>TEXT(ELV_Partner__r.Partner_Maturity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Account Partner Maturity</label>
    <type>Text</type>
</CustomField>