objects/Quote/fields/ELV_Partner_Account_Sales_Model__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Account_Sales_Model__c</fullName>
    <formula>Text(ELV_Partner__r.Sales_Model__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Account Sales Model</label>
    <type>Text</type>
</CustomField>