objects/Quote/fields/ELV_Partner_Accreditation__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Accreditation__c</fullName>
    <label>Partner Accreditation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>