objects/Quote/fields/ELV_Partner_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Agreement_Date__c</fullName>
    <label>Partner Agreement Date</label>
    <type>Date</type>
</CustomField>