objects/Quote/fields/ELV_Partner_Deal__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Deal__c</fullName>
    <formula>IF( ISBLANK(ELV_PartnerName__c),FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Deal</label>
    <type>Checkbox</type>
</CustomField>