objects/Quote/fields/ELV_Partner_Distribution__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Distribution__c</fullName>
    <formula>IF(INCLUDES(ELV_Partner__r.Partner_Type__c, &quot;Distributor&quot;) || INCLUDES(ELV_Partner__r.Business_Motion__c, &quot;Distribute&quot;), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Distribution</label>
    <type>Text</type>
</CustomField>