objects/Quote/fields/ELV_Partner_is_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_is_Incumbent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner is Incumbent</label>
    <type>Checkbox</type>
</CustomField>