objects/Quote/fields/ELV_Partner_Level__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Level__c</fullName>
    <formula>TEXT(ELV_Partner__r.Partner_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Level</label>
    <type>Text</type>
</CustomField>