objects/Quote/fields/ELV_Partner_Margin_Rollup_Percent_del__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Margin_Rollup_Percent_del__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Margin Rollup Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>