objects/Quote/fields/ELV_Partner_Program_Bucket__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Program_Bucket__c</fullName>
    <label>Partner Program Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fulfill</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>Partner Sourced</fullName>
            </value>
            <value>
                <fullName>Teaming</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Partner Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>