objects/Quote/fields/ELV_Partner_Program_Tier__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Program_Tier__c</fullName>
    <label>Partner Program Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>