objects/Quote/fields/ELV_Partner_Referral_Fee_Dollars__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Referral_Fee_Dollars__c</fullName>
    <formula>Opportunity.Partner_Referral_Fee_Dollars__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Referral Fee ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>