objects/Quote/fields/ELV_Partner_Referral_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Referral_Fee_Percent__c</fullName>
    <formula>IF(ELV_Day_1_ARR_Unadjusted_Rollup__c = 0, 0, ELV_Partner_Referral_Fee_Dollars__c/ELV_Day_1_ARR_Unadjusted_Rollup__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Referral Fee (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>