objects/Quote/fields/ELV_Partner_Without_the_Suffix__c.field-meta.xml
<CustomField>
    <fullName>ELV_Partner_Without_the_Suffix__c</fullName>
    <formula>SUBSTITUTE(ELV_PartnerName__c,&quot;(Partner)&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Without the Suffix</label>
    <type>Text</type>
</CustomField>