objects/Quote/fields/ELV_PartnerAcctOutstandingCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerAcctOutstandingCreditLimit__c</fullName>
    <formula>ELV_Partner__r.Credit_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Account Outstanding Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>