objects/Quote/fields/ELV_PartnerAgrDateonTemplate__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerAgrDateonTemplate__c</fullName>
    <formula>CASE(MONTH(ELV_PartnerAgreementDate__c),1,&quot;January&quot;,2,&quot;February&quot;,3,&quot;March&quot;,4,&quot;April&quot;,5,&quot;May&quot;,6,&quot;June&quot;,7,&quot;July&quot;,8,&quot;August&quot;,9,&quot;September&quot;,10,&quot;October&quot;,11,&quot;November&quot;,12,&quot;December&quot;,&quot;None&quot;) &amp; &quot; &quot; &amp; TEXT(DAY(ELV_PartnerAgreementDate__c)) &amp; &quot;, &quot; &amp; TEXT(YEAR(ELV_PartnerAgreementDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Agreement Date on Template</label>
    <type>Text</type>
</CustomField>