objects/Quote/fields/ELV_PartnerAgreement__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerAgreement__c</fullName>
    <formula>TEXT(ELV_Partner__r.PartnerAgreement__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Agreement</label>
    <type>Text</type>
</CustomField>