objects/Quote/fields/ELV_PartnerAgreementDate__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerAgreementDate__c</fullName>
    <formula>ELV_Partner__r.PartnerAgreementDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Agreement Date</label>
    <type>Date</type>
</CustomField>