objects/Quote/fields/ELV_PartnerExclusionforOnPremQuote__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerExclusionforOnPremQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Exclusion for On-Prem Quote</label>
    <type>Checkbox</type>
</CustomField>