objects/Quote/fields/ELV_PartnerName__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerName__c</fullName>
    <formula>ELV_Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Name</label>
    <type>Text</type>
</CustomField>