objects/Quote/fields/ELV_PartnerProgramOverrideJustif__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerProgramOverrideJustif__c</fullName>
    <label>Partner Program Override Justification</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>