objects/Quote/fields/ELV_PartnerQuote__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerQuote__c</fullName>
    <formula>IF( ELV_Partner__c  &lt;&gt;  NULL , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Quote</label>
    <type>Checkbox</type>
</CustomField>