objects/Quote/fields/ELV_PartnerRebateDay1DollarsRollup__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerRebateDay1DollarsRollup__c</fullName>
    <label>DEPRECATED - Partner Rebate Day 1 ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>