objects/Quote/fields/ELV_PartnerRebateEligQuoteLinesSum__c.field-meta.xml
<CustomField>
    <fullName>ELV_PartnerRebateEligQuoteLinesSum__c</fullName>
    <label>DEPRECATED - Rebate Eligible Lines Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>