objects/Quote/fields/ELV_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ELV_Payment_Schedule__c</fullName>
    <label>Payment Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Installments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>