objects/Quote/fields/ELV_Payment_Term_Override__c.field-meta.xml
<CustomField>
    <fullName>ELV_Payment_Term_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Term Override</label>
    <type>Checkbox</type>
</CustomField>