objects/Quote/fields/ELV_PaymentTypeNew__c.field-meta.xml
<CustomField>
    <fullName>ELV_PaymentTypeNew__c</fullName>
    <label>Billing Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Annual Installment</fullName>
            </value>
            <value>
                <fullName>Quarterly Installment</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>