objects/Quote/fields/ELV_Perpetual_count_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>ELV_Perpetual_count_Roll_up__c</fullName>
    <label>Perpetual count Roll-up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>