objects/Quote/fields/ELV_Pilot_Gate_Active__c.field-meta.xml
<CustomField>
    <fullName>ELV_Pilot_Gate_Active__c</fullName>
    <label>Pilot Gate Active</label>
    <description>Server-stamped, fail-closed marker read by the Nue pricing/product-rule plug-ins. Set true only when ELV_PricingControl.isActive() resolves true for the running user (CMT master switch AND pilot user match). The plug-in never evaluates user identity itself — it only trusts this field, defaulting to inactive when absent or false.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>