objects/Quote/fields/ELV_PO_Exempt__c.field-meta.xml
<CustomField>
    <fullName>ELV_PO_Exempt__c</fullName>
    <formula>Opportunity.PO_Exempt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Exempt</label>
    <type>Checkbox</type>
</CustomField>