objects/Quote/fields/ELV_Pre_Uplift_Amount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Pre_Uplift_Amount__c</fullName>
    <formula>Opportunity.Uplift_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Uplift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>