objects/Quote/fields/ELV_Previous_Seats_Purchased__c.field-meta.xml
<CustomField>
    <fullName>ELV_Previous_Seats_Purchased__c</fullName>
    <label>Previous Seats Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>