objects/Quote/fields/ELV_Pricing_Discount_Explanation__c.field-meta.xml
<CustomField>
    <fullName>ELV_Pricing_Discount_Explanation__c</fullName>
    <label>Pricing/Discount Explanation</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>