objects/Quote/fields/ELV_Pricing_Discount_Justification__c.field-meta.xml
<CustomField>
    <fullName>ELV_Pricing_Discount_Justification__c</fullName>
    <label>Pricing/Discount Justification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budgeting</fullName>
            </value>
            <value>
                <fullName>Churn Risk</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Historical Discount</fullName>
            </value>
            <value>
                <fullName>Land and Expand</fullName>
            </value>
            <value>
                <fullName>Quarterly BAFO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>