objects/Quote/fields/ELV_Primary_Updated_and_Approved__c.field-meta.xml
<CustomField>
    <fullName>ELV_Primary_Updated_and_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Updated and Approved</label>
    <type>Checkbox</type>
</CustomField>