objects/Quote/fields/ELV_PrintBillingScheduleCustomer__c.field-meta.xml
<CustomField>
    <fullName>ELV_PrintBillingScheduleCustomer__c</fullName>
    <formula>IF( BillingName = ShippingName, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Billing Schedule-Customer</label>
    <type>Checkbox</type>
</CustomField>