objects/Quote/fields/ELV_PrintBillingSchedulePartner__c.field-meta.xml
<CustomField>
    <fullName>ELV_PrintBillingSchedulePartner__c</fullName>
    <formula>IF( BillingName  &lt;&gt;  ShippingName, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Print Billing Schedule-Partner</label>
    <type>Checkbox</type>
</CustomField>