objects/Quote/fields/ELV_Product_Discount_no_Promo__c.field-meta.xml
<CustomField>
    <fullName>ELV_Product_Discount_no_Promo__c</fullName>
    <label>DEPRECATED - Product Discount no Promo</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>