objects/Quote/fields/ELV_Promo_Codes__c.field-meta.xml
<CustomField>
    <fullName>ELV_Promo_Codes__c</fullName>
    <label>Promo Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>