objects/Quote/fields/ELV_Promotion_Exist__c.field-meta.xml
<CustomField>
    <fullName>ELV_Promotion_Exist__c</fullName>
    <label>Promotion Exist</label>
    <summaryFilterItems>
        <field>QuoteLineItem.ELV_Promotion__c</field>
        <operation>equals</operation>
        <value>Burst,FOC,Trial</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>