objects/Quote/fields/ELV_PromotionExist__c.field-meta.xml
<CustomField>
    <fullName>ELV_PromotionExist__c</fullName>
    <label>DEPRECATED - Promotion Exist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>