objects/Quote/fields/ELV_QteNetTotQLBillDiscrep__c.field-meta.xml
<CustomField>
    <fullName>ELV_QteNetTotQLBillDiscrep__c</fullName>
    <formula>Ruby__SellerTotalAmount__c - ELV_Billing_Schedule_Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Net Total Billing Discrepancy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>